service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kuber   
spec:
  selector:
    env: fedorov
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
