ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kube-ingress
spec:
  rules:
  - host: arch.homework
    http:
      paths:
      - path: /health
        pathType: Prefix
        backend:
          service:
            name: kuber
            port:
              number: 80
